# cbw-prueba-tecnica

./: .dockerignore  .env.dev  .pre-commit-config.yaml  README.md  launch.json  pyproject.toml  whitelist.py
app/: main.py
app/adapters/controllers/: task.py
app/adapters/repositories/: task.py
app/adapters/repositories/mongo/: task.py
app/adapters/repositories/mongo/models/: task.py
app/adapters/repositories/workers/: task.py
app/adapters/repositories/workers/models/: task.py
app/adapters/routes/: api.py
app/config/: config.py  debugger.py  mongo.py
app/configs/: celery.py  debugger.py  logging.py  mongo.py  settings.py
app/domains/models/: errors.py  task.py
app/domains/ports/: task.py
app/domains/services/: task.py
app/workers/: notify_due_task.py  report.py  review_task_status.py
docker/: Docker-compose.dev.yml  Dockerfile  Dockerfile.api  Dockerfile.worker
